--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
@@ -10,9 +10,8 @@ Intel VT是Intel平台上**硬件虚拟化技术的总称**, 包含了对**CPU**
 - **内存虚拟化**, Intel VT提供了**EPT(Extended Page Table)技术**; 
 - **I/O设备虚拟化**, Intel提供了**VT\-d**(Intel Virtualization Technology for Direct I/O)等技术.
 
-
 AMD平台提供了类似的技术, 即AMD Virtualization(AMD\-V).
 
-- 在处理器虚拟化方面，AMD SVM提供了与Intel VT-x类似的技术；
-- 在内存虚拟化方面，AMD SVM提供了NPT(Nested Page Table）技术；
-- 在I/O设备虚拟化方面，AMD SVM提供了IOMMU （I/O Memory Management Unit）技术。
+- 在**处理器虚拟化**方面，AMD **SVM**提供了与Intel VT-x类似的技术；
+- 在**内存虚拟化**方面，AMD SVM提供了**NPT(Nested Page Table**)技术；
+- 在I/O设备虚拟化方面，AMD SVM提供了**IOMMU**(I/O Memory Management Unit)技术。
