--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/2. 处理器虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/2. 处理器虚拟化.md
@@ -3,27 +3,27 @@
 
 <!-- code_chunk_output -->
 
-* [1 指令的模拟](#1-指令的模拟)
-	* [1.1 虚拟寄存器](#11-虚拟寄存器)
-	* [1.2 上下文](#12-上下文)
-	* [1.3 虚拟处理器](#13-虚拟处理器)
-		* [1.3.1 客户机OS角度的虚拟处理器](#131-客户机os角度的虚拟处理器)
-		* [1.3.2 VMM角度的虚拟处理器](#132-vmm角度的虚拟处理器)
-	* [1.4 VMM的陷入方式](#14-vmm的陷入方式)
-* [2 中断和异常的模拟及注入](#2-中断和异常的模拟及注入)
-* [3 对称多处理器技术的模拟](#3-对称多处理器技术的模拟)
+- [指令的模拟](#指令的模拟)
+  - [虚拟寄存器](#虚拟寄存器)
+  - [1.2 上下文](#12-上下文)
+  - [1.3 虚拟处理器](#13-虚拟处理器)
+    - [1.3.1 客户机OS角度的虚拟处理器](#131-客户机os角度的虚拟处理器)
+    - [1.3.2 VMM角度的虚拟处理器](#132-vmm角度的虚拟处理器)
+  - [VMM的陷入方式](#vmm的陷入方式)
+- [2 中断和异常的模拟及注入](#2-中断和异常的模拟及注入)
+- [3 对称多处理器技术的模拟](#3-对称多处理器技术的模拟)
 
 <!-- /code_chunk_output -->
 
 处理器虚拟化是VMM中最核心的部分, 因为**访问内存**和**I/O指令**本身就是**敏感指令**, 所以**内存虚拟化**和**I/O虚拟化**都依赖于**处理器虚拟化**的正确实现.
 
-# 1 指令的模拟
+# 指令的模拟
 
 **VMM**运行在**最高特权级**, 可以控制物理处理器上所有关键资源; **客户机OS**运行在**非最高特权级**, 所以其敏感指令会陷入到VMM中通过软件方式进行模拟. 所以, 处理器虚拟化的关键在于正确模拟指令的行为.
 
 介绍指令模拟之前, 我们理解三个概念: 虚拟寄存器、上下文和虚拟处理器.
 
-## 1.1 虚拟寄存器
+## 虚拟寄存器
 
 从某种程度上, **物理处理器**无非包括了一些**存放数据的物理寄存器**, 并且规定了**使用这些寄存器的指令集**, 然后按照一段预先写好的**指令流**, 在给定的时间点使用给定的部分寄存器来完成某种目的.
 
@@ -78,11 +78,11 @@
 
 VMM已经可以为虚拟机呈现与实际物理机不一致的功能和行为。 例如, 虚拟处理器的个数, 可以与物理处理器的个数不一致。
 
-总之, 在处理器虚拟化中, 定义虚拟寄存器和虚拟处理器, 利用上下文进行虚拟处理器调度切换, 宗旨都是让**虚拟机执行的敏感指令陷入**下来后, 能被VMM模拟, 而不直接作用于真实硬件上.
+总之, 在**处理器虚拟化**中, 定义虚拟寄存器和虚拟处理器, 利用上下文进行虚拟处理器调度切换, **宗旨**都是让**虚拟机执行的敏感指令陷入**下来后, 能被VMM模拟, 而不直接作用于真实硬件上.
 
-## 1.4 VMM的陷入方式
+## VMM的陷入方式
 
-当然, 模拟的前提是能够陷入. 
+当然, 模拟的前提是**能够陷入**. 
 
 那**客户机OS执行**时, 是**如何通知VMM**的, 也就是**VMM的陷入方式**. 
 
