--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
@@ -55,6 +55,8 @@
 
 ⓵ **所有指令解释执行**. 最简单最直接的方法是, 如果**所有虚拟化都采用模拟来实现(！！！**), 例如**解释执行**, 就是**取一条指令**, **模拟出这条指令执行的效果**, 再**继续取下一条指令(！！！所有指令, 无论是否敏感指令！！！**), 那么就**不存在所谓陷入不陷入**的问题, 从而避免了虚拟化漏洞. 这种方法不但能适用于模拟与物理机相同体系结构的虚拟机, 而且也能模拟不同体系结构的虚拟机. 这种方法保证了所有指令执行收到VMM的监管, 但它对每条指令不区别对待, 最大缺点是**性能太差**, 不符合虚拟机"高效"特点.
 
-⓶ **硬件辅助手段**. 既要填补**虚拟化漏洞**, 又要保证**虚拟化性能**, 只能采取一些**辅助手段**, 或直接**在硬件层面填补虚拟化漏洞！！！**, 
+既要填补**虚拟化漏洞**, 又要保证**虚拟化性能**, 只能采取一些**辅助手段**.
 
-⓷ **软件辅助**避免使用无法陷入的敏感指令. 或通过**软件**的方法**避免虚拟机中使用无法陷入的敏感指令！！！**.
+⓶ **硬件辅助手段**. 直接**在硬件层面填补虚拟化漏洞！！！**, 
+
+⓷ **软件辅助**. 通过**软件**的方法**避免虚拟机中使用无法陷入的敏感指令！！！**.
