--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -3,30 +3,30 @@
 
 <!-- code_chunk_output -->
 
-- [ 1 概述](#1-概述)
-- [ 2 非虚拟化](#2-非虚拟化)
-- [ 2 虚拟化](#2-虚拟化)
-  - [ 2.1 内存虚拟化的目的](#21-内存虚拟化的目的)
-  - [ 2.2 内存虚拟化面临的问题](#22-内存虚拟化面临的问题)
-  - [ 2.3 内存虚拟化实现](#23-内存虚拟化实现)
+- [1. 背景](#1-背景)
+- [2. 非虚拟化](#2-非虚拟化)
+- [3. 虚拟化](#3-虚拟化)
+  - [3.1. 内存虚拟化的目的](#31-内存虚拟化的目的)
+  - [3.2. 内存虚拟化面临的问题](#32-内存虚拟化面临的问题)
+  - [3.3. 内存虚拟化实现](#33-内存虚拟化实现)
 
 <!-- /code_chunk_output -->
 
-# 1 概述
+# 1. 背景
 
 首先从一个**操作系统的角度**, 介绍其对物理内存存在的两个主要基本认识: 
 
 - **物理地址从0开始**
 - 和**内存地址连续性**(至少在一些大的粒度上连续)
 
-而**内存虚拟化**的产生, 主要源于**VMM与客户机操作系统！！！**在**对物理内存的认识**上存在冲突, 造成**物理内存的真正拥有者** \-\-\-\- **VMM**, 必须对客户OS所访问的内存进行一定程度的虚拟化. 
+而**内存虚拟化**的产生, 主要源于**VMM与客户机操作系统！！！**在**对物理内存的认识**上存在冲突, 造成**物理内存的真正拥有者** \-\-\-\- **VMM**, 必须对**客户OS**所访问的**内存**进行一定程度的**虚拟化**. 
 
 **内存虚拟化**:
 
 - 既满足了**客户机操作系统**对于**内存和地址空间**的**特定认识**, 
-- 也可以更好在**虚拟机之间**、**虚拟机与VMM**之间进行隔离, 防止某个虚拟机内部的活动影响到其它的虚拟机甚至是VMM本身, 从而造成安全上的漏洞.
+- 也可以更好在**虚拟机之间**、**虚拟机与VMM**之间进行**隔离**, 防止某个虚拟机内部的活动影响到其它的虚拟机甚至是VMM本身, 从而造成安全上的漏洞.
 
-# 2 非虚拟化
+# 2. 非虚拟化
 
 先分析没有虚拟化的环境. 这种环境, 任何一个OS都认为自己完全控制处理器, 相应的就完全拥有了内存的所有权. 所以OS总是按照一台物理计算机上内存的属性和特征对其进行管理.
 
@@ -50,28 +50,28 @@
 
 ⓶ 内存都是**连续**的, 或者说至少在一些**大的粒度**(如256MB)上连续.
 
-# 2 虚拟化
+# 3. 虚拟化
 
-## 2.1 内存虚拟化的目的
+## 3.1. 内存虚拟化的目的
 
 在虚拟化环境里, VMM的任务就是模拟使得**模拟出来的内存**仍然符合**客户机操作系统**对**内存**的假定和认识.
 
 因此, 在**虚拟化环境**中, 内存虚拟化的目的有两个.
 
-- 提供给虚拟机一个从零地址开始的连续物理内存空间.
-- 在各虚拟机之间有效隔离、调度和共享内存资源.
+* 提供给虚拟机一个从零地址开始的连续物理内存空间.
+* 在各虚拟机之间有效隔离、调度和共享内存资源.
 
-## 2.2 内存虚拟化面临的问题
+## 3.2. 内存虚拟化面临的问题
 
 **内存虚拟化**面临的问题是: 
 
-- **物理内存**要被**多个客户机操作系统同时使用**, 但**物理内存只有一份**, **物理起始地址0也显然只有一个**, 无法同时满足**所有客户机操作系统内存从0开始的要求**; 
+* **物理内存**要被**多个客户机操作系统同时使用**, 但**物理内存只有一份**, **物理起始地址0也显然只有一个**, 无法同时满足**所有客户机操作系统内存从0开始的要求**; 
 
-- 由于使用**内存分区方式！！！**, 把**物理内存**分给**多个客户机操作系统使用**, 客户机操作系统的**内存连续性要求**虽然能得到解决, 但内存的使用效率非常不灵活. 
+* 由于使用**内存分区方式！！！**, 把**物理内存**分给**多个客户机操作系统使用**, 客户机操作系统的**内存连续性要求**虽然能得到解决, 但内存的使用效率非常不灵活. 
 
 在面临这些问题的情况下，内存虚拟化的核心, 在于引入了一层新的地址空间 --- **客户机物理地址空间**.
 
-## 2.3 内存虚拟化实现
+## 3.3. 内存虚拟化实现
 
 图3\-5中, **VMM**负责**管理和分配**每个**虚拟机的物理内存**, **客户机OS**看到的是一个虚构的**客户机物理地址空间**, 其**指令目标地址**也是一个**客户机物理地址**. 在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM**负责将**客户机物理地址**首先转换成一个**实际物理地址**后, 再交给物理处理器来执行.
 
