--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
@@ -1,4 +1,4 @@
-以Intel Virtualization Technology(Intel VT)为例说明硬件辅助虚拟化技术.
+以Intel Virtualization Technology(Intel VT)为例说明硬件辅助虚拟化技术. 中间也会讲AMD SVM(主要内容来源于 <虚拟化技术原理与实现>)
 
 Intel VT是Intel平台上**硬件虚拟化技术的总称**, 包含了对**CPU**、**内存**和**I/O设备**等各方面支持。图5\-1的Physical Platform Resource列举了Intel VT涵盖的内容. 
 
