--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -73,9 +73,11 @@
 
 ## 3.3. 内存虚拟化实现
 
-图3\-5中, **VMM**负责**管理和分配**每个**虚拟机的物理内存**, **客户机OS**看到的是一个虚构的**客户机物理地址空间**, 其**指令目标地址**也是一个**客户机物理地址**. 在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM**负责将**客户机物理地址**首先转换成一个**实际物理地址**后, 再交给物理处理器来执行.
+图3\-5中, **VMM**负责**管理和分配**每个**虚拟机的物理内存**, **客户机OS**看到的是一个虚构的**客户机物理地址空间**, 其**指令目标地址**也是一个**客户机物理地址**. 
 
-![config](./images/5.png)
+在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM**负责将**客户机物理地址**首先转换成一个**实际物理地址**后, 再交给物理处理器来执行.
+
+![2019-12-12-12-26-49.png](./images/2019-12-12-12-26-49.png)
 
 值得一提的是, 为更有效利用空闲的物理内存, 尤其是系统长期运行后产生的碎片, VMM通常会以比较小的粒度(如4KB)进行分配, 这就会造成了给定一个虚拟机的物理内存实际上是不连续的问题, 其具体位置完全取决于VMM的内存分配算法.
 
