--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 背景](#1-背景)
-- [2. 非虚拟化](#2-非虚拟化)
+- [2. 没有虚拟化的环境](#2-没有虚拟化的环境)
 - [3. 虚拟化](#3-虚拟化)
   - [3.1. 内存虚拟化的目的](#31-内存虚拟化的目的)
   - [3.2. 内存虚拟化面临的问题](#32-内存虚拟化面临的问题)
@@ -26,7 +26,7 @@
 - 既满足了**客户机操作系统**对于**内存和地址空间**的**特定认识**, 
 - 也可以更好在**虚拟机之间**、**虚拟机与VMM**之间进行**隔离**, 防止某个虚拟机内部的活动影响到其它的虚拟机甚至是VMM本身, 从而造成安全上的漏洞.
 
-# 2. 非虚拟化
+# 2. 没有虚拟化的环境
 
 先分析没有虚拟化的环境. 这种环境, 任何一个OS都认为自己完全控制处理器, 相应的就完全拥有了内存的所有权. 所以OS总是按照一台物理计算机上内存的属性和特征对其进行管理.
 
@@ -44,7 +44,7 @@
 
 实际设备中, 这两种模式很普遍, 而且即使后一种模式, **设备允许的离散块数目是有限的**, 为支持**更大的DMA区域**, 驱动程序仍然会在**每一个离散块**中分配**多个连续的内存页面**, 这就意味着驱动必须从OS中分配到足够多连续的空闲内存页来满足DMA的要求.
 
-总之, 在没有虚拟化情况下, 操作系统在对内存的使用与管理已经达成以下两点认识.
+总之, 在**没有虚拟化**情况下, **操作系统**在对**内存的使用**与管理已经达成以下两点认识.
 
 ⓵ 内存都是从**物理地址0**开始的.
 
@@ -81,7 +81,7 @@
 
 值得一提的是, 为更有效利用空闲的物理内存, 尤其是系统长期运行后产生的碎片, VMM通常会以比较小的粒度(如4KB)进行分配, 这就会造成了给定一个虚拟机的物理内存实际上是不连续的问题, 其具体位置完全取决于VMM的内存分配算法.
 
-客户机物理地址空间, **内存虚拟化**就主要处理以下两个方面的问题.
+由于引入了客户机物理地址空间, **内存虚拟化**就主要处理以下两个方面的问题.
 
 ⓵ 给定一个虚拟机, 维护**客户机物理地址**到**宿主机物理地址之间的映射关系**.
 
@@ -93,7 +93,7 @@
 
 一个最简单的办法, 设法让虚拟机对客户机物理地址空间的每一次访问都触发异常, 然后由VMM来查询地址转换表模拟其访问. 这种方法完备性和正确性没问题, 但性能是最差的, 其它方法见后续.
 
-内存虚拟化还实现了整个系统的安全隔离, 包括虚拟机之间, 虚拟机与VMM之间.
+内存虚拟化还实现了整个系统的**安全隔离**, 包括**虚拟机之间**, **虚拟机与VMM之间**.
 
 (1) VMM通过处理器硬件功能使得客户机操作系统完全运行在不同的地址空间, 或通过段限制使客户机OS所能"看见"的空间大小, 以保证VMM自身的安全性, 从而防止虚拟机触及VMM自身的运行状态.
 
