--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -3,20 +3,21 @@
 
 <!-- code_chunk_output -->
 
-- [1. 背景](#1-背景)
+- [1. 背景概述和内存虚拟化概述](#1-背景概述和内存虚拟化概述)
 - [2. 没有虚拟化的环境](#2-没有虚拟化的环境)
-  - [指令对内存的访问](#指令对内存的访问)
-  - [操作系统对内存的认知](#操作系统对内存的认知)
-    - [Linux内核可执行文件](#linux内核可执行文件)
-    - [DMA操作](#dma操作)
+  - [2.1. 指令对内存的访问](#21-指令对内存的访问)
+  - [2.2. 操作系统对内存的认知](#22-操作系统对内存的认知)
+    - [2.2.1. Linux内核可执行文件](#221-linux内核可执行文件)
+    - [2.2.2. DMA操作](#222-dma操作)
+    - [2.2.3. 操作系统对内存的认知小结](#223-操作系统对内存的认知小结)
 - [3. 虚拟化](#3-虚拟化)
   - [3.1. 内存虚拟化的目的](#31-内存虚拟化的目的)
-  - [3.2. 内存虚拟化面临的问题](#32-内存虚拟化面临的问题)
+  - [3.2. 内存虚拟化面临的问题和解决办法](#32-内存虚拟化面临的问题和解决办法)
   - [3.3. 内存虚拟化实现](#33-内存虚拟化实现)
 
 <!-- /code_chunk_output -->
 
-# 1. 背景
+# 1. 背景概述和内存虚拟化概述
 
 首先从一个**操作系统的角度**, 介绍其对物理内存存在的两个主要基本认识: 
 
@@ -25,10 +26,14 @@
 
 而**内存虚拟化**的产生, 主要源于**VMM与客户机操作系统！！！**在**对物理内存的认识**上存在冲突, 造成**物理内存的真正拥有者** \-\-\-\- **VMM**, 必须对**客户OS**所访问的**内存**进行一定程度的**虚拟化**. 
 
-**内存虚拟化**:
+所以VMM满足客户机操作系统对内存的这两点要求, 这个欺骗过程, 就是**内存虚拟化**.
+
+不仅仅如此, 实际上, **内存虚拟化**做到了:
 
 - 既满足了**客户机操作系统**对于**内存和地址空间**的**特定认识**, 
 - 也可以更好在**虚拟机之间**、**虚拟机与VMM**之间进行**隔离**, 防止某个虚拟机内部的活动影响到其它的虚拟机甚至是VMM本身, 从而造成安全上的漏洞.
+
+下面详细说明下.
 
 # 2. 没有虚拟化的环境
 
@@ -36,7 +41,7 @@
 
 详细见第二章内存
 
-## 指令对内存的访问
+## 2.1. 指令对内存的访问
 
 **指令对于内存的访问**都是通过**处理器来转发**的, 首先**处理器**会将**解码后的信息请求**发送到**系统总线**上, 然后**由芯片组来负责进一步转发**. 
 
@@ -50,11 +55,11 @@
 
 例如4个内存插槽的主板, 每个插槽插上256MB的内存条, 如果4根插槽的起始地址分别固定为0x00000000、0x10000000、0x20000000和0x30000000, 那么在它们上面的物理内存就被映射为0x00000000 --- 0x0FFFFFFF、0x10000000 --- 0x1FFFFFFF、0x20000000 --- 0x2FFFFFFF、0x30000000 --- 0x3FFFFFFF这4段. 总的来说, 这四根内存条组成了该系统1GB的内存, 而且这1GB内存是从0开始的连续空间, 4根内存条上每个字节都会对应到唯一的物理地址. 处理器访问任何一个字节就是通过请求一个物理地址, 芯片组收到处理器发出的内存访问请求后, 会检测内核维护的物理地址空间的分配表, 当发现目标地址落在0x00000000 --- 0x3FFFFFFF范围内时, 处理器就会进一步将请求转发给内存控制器.
 
-## 操作系统对内存的认知
+## 2.2. 操作系统对内存的认知
 
-在**没有虚拟化的环境**中, **OS**也会**假定物理内存是从物理地址0开始**的. 
+在**没有虚拟化的环境**中, **操作系统**也会**假定物理内存是从物理地址0开始**的. 
 
-### Linux内核可执行文件
+### 2.2.1. Linux内核可执行文件
 
 以**x86处理器上的Linux**为例. 在x86上, **Linux内核可执行文件头**里**定义了每个段的大小！！！**、期望在**物理地址空间！！！中被加载的位置**即**1MB！！！**, 以及**加载后执行第一条指令的地址！！！** 等, 这些信息在**编译链接阶段就确定下来**了. 
 
@@ -64,7 +69,7 @@
 
 如果**物理地址空间不是从0开始**的, **Boot Loader**将会因指定位置**找不到可用内存而拒绝加载内核**, 及时加载内核到内存中, 由于内核代码在访问段时也会自身产生错误而造成整个系统的崩溃.
 
-### DMA操作
+### 2.2.2. DMA操作
 
 除此之外, **现实**中**操作系统基本上对内存连续性**存在一定程度的**依赖性**, 如**DMA**. DMA的目的就是允许**设备绕过处理器**来直接**访问物理内存**, 从而保证了I/O处理的高效. 目前绝大多数设备都支持DMA功能, 只是在实现上对驱动程序提出了不同的要求. 如图.
 
@@ -78,6 +83,8 @@
 
 实际设备中, 这两种模式很普遍, 而且即使后一种模式, **设备允许的离散块数目是有限的**, 为支持**更大的DMA区域**, 驱动程序仍然会在**每一个离散块**中分配**多个连续的内存页面**, 这就意味着驱动必须从OS中分配到足够多连续的空闲内存页来满足DMA的要求.
 
+### 2.2.3. 操作系统对内存的认知小结
+
 总之, 在**没有虚拟化**情况下, **操作系统**在对**内存的使用**与管理已经达成以下两点认识.
 
 ⓵ 内存都是从**物理地址0**开始的.
@@ -88,26 +95,26 @@
 
 ## 3.1. 内存虚拟化的目的
 
-在虚拟化环境里, VMM的任务就是模拟使得**模拟出来的内存**仍然符合**客户机操作系统**对**内存**的假定和认识.
+从上面操作系统对物理内存的假定和认知， 在**虚拟化环境**里, VMM的任务就是模拟使得**模拟出来的内存**仍然符合**客户机操作系统**对**内存**的假定和认识.
 
 因此, 在**虚拟化环境**中, 内存虚拟化的目的有两个.
 
-* 提供给虚拟机一个从零地址开始的连续物理内存空间.
+* 提供给**虚拟机**一个**从零地址开始的连续物理内存空间**.
 * 在各虚拟机之间有效隔离、调度和共享内存资源.
 
-## 3.2. 内存虚拟化面临的问题
+## 3.2. 内存虚拟化面临的问题和解决办法
 
-**内存虚拟化**面临的问题是: 
+因此， **内存虚拟化**面临的问题是: 
 
 * **物理内存**要被**多个客户机操作系统同时使用**, 但**物理内存只有一份**, **物理起始地址0也显然只有一个**, 无法同时满足**所有客户机操作系统内存从0开始的要求**; 
 
-* 由于使用**内存分区方式！！！**, 把**物理内存**分给**多个客户机操作系统使用**, 客户机操作系统的**内存连续性要求**虽然能得到解决, 但内存的使用效率非常不灵活. 
+* 由于使用**内存分区方式！！！**, 把**物理内存**分给**多个客户机操作系统使用**, 客户机操作系统的**内存连续性要求！！！** 虽然能得到解决, 但内存的使用效率非常不灵活. 
 
 在面临这些问题的情况下，内存虚拟化的核心, 在于引入了一层新的地址空间 --- **客户机物理地址空间**.
 
 ## 3.3. 内存虚拟化实现
 
-图3\-5中, **VMM**负责**管理和分配**每个**虚拟机的物理内存**, **客户机OS**看到的是一个虚构的**客户机物理地址空间**, 其**指令目标地址**也是一个**客户机物理地址**. 
+图3\-5中, **VMM！！！** 负责**管理和分配**每个**虚拟机的物理内存！！！**, **客户机OS！！！** 看到的是一个虚构的**客户机物理地址空间！！！**, 其**指令目标地址！！！** 也是一个**客户机物理地址！！！**. 
 
 在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM**负责将**客户机物理地址**首先转换成一个**实际物理地址**后, 再交给物理处理器来执行.
 
