--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -14,6 +14,8 @@
   - [3.1. 内存虚拟化的目的](#31-内存虚拟化的目的)
   - [3.2. 内存虚拟化面临的问题和解决办法](#32-内存虚拟化面临的问题和解决办法)
   - [3.3. 内存虚拟化实现](#33-内存虚拟化实现)
+    - [内存虚拟化主要工作](#内存虚拟化主要工作)
+    - [系统的安全隔离](#系统的安全隔离)
 
 <!-- /code_chunk_output -->
 
@@ -116,17 +118,19 @@
 
 图3\-5中, **VMM！！！** 负责**管理和分配**每个**虚拟机的物理内存！！！**, **客户机OS！！！** 看到的是一个虚构的**客户机物理地址空间！！！**, 其**指令目标地址！！！** 也是一个**客户机物理地址！！！**. 
 
-在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM**负责将**客户机物理地址**首先转换成一个**实际物理地址**后, 再交给物理处理器来执行.
+在**虚拟化环境**下, 这样的地址是不能被直接发送到系统总线上, 需要**VMM！！！** 负责将**客户机物理地址！！！** 首先转换成一个**实际物理地址！！！** 后, 再交给**物理处理器**来执行.
 
 ![2019-12-12-12-26-49.png](./images/2019-12-12-12-26-49.png)
 
-值得一提的是, 为更有效利用空闲的物理内存, 尤其是系统长期运行后产生的碎片, VMM通常会以比较小的粒度(如4KB)进行分配, 这就会造成了给定一个虚拟机的物理内存实际上是不连续的问题, 其具体位置完全取决于VMM的内存分配算法.
+值得一提的是, 为**更有效利用空闲的物理内存**, 尤其是系统长期运行后产生的碎片, VMM通常会以比较小的粒度(如4KB)进行分配, 这就会造成了给定一个虚拟机的物理内存实际上是不连续的问题, 其具体位置完全取决于VMM的内存分配算法.
 
-由于引入了客户机物理地址空间, **内存虚拟化**就主要处理以下两个方面的问题.
+### 内存虚拟化主要工作
 
-⓵ 给定一个虚拟机, 维护**客户机物理地址**到**宿主机物理地址之间的映射关系**.
+由于引入了**客户机物理地址空间**, **内存虚拟化**就主要处理以下两个方面的问题.
 
-⓶ **截获**虚拟机**对客户机物理地址的访问**, 并根据所记录的映射关系, 将其**转换**成宿主机物理地址.
+⓵ 给定一个虚拟机, 维护**客户机物理地址**到**宿主机物理地址之间的映射关系！！！**.
+
+⓶ **截获！！！** 虚拟机**对客户机物理地址的访问**, 并根据所记录的映射关系, 将其**转换**成**宿主机物理地址**.
 
 第一个问题相对比较简单, 因为这只是一个数据结构的映射问题. 在实现过程中, 客户机OS采用客户页表维护了该虚拟机里进程所使用的虚拟地址到客户机物理地址的动态映射关系; VMM负责维护客户机物理地址到宿主机物理地址之间的动态映射关系.
 
@@ -134,7 +138,9 @@
 
 一个最简单的办法, 设法让虚拟机对客户机物理地址空间的每一次访问都触发异常, 然后由VMM来查询地址转换表模拟其访问. 这种方法完备性和正确性没问题, 但性能是最差的, 其它方法见后续.
 
-内存虚拟化还实现了整个系统的**安全隔离**, 包括**虚拟机之间**, **虚拟机与VMM之间**.
+### 系统的安全隔离
+
+内存虚拟化还实现了**整个系统**的**安全隔离**, 包括**虚拟机之间**, **虚拟机与VMM之间**.
 
 (1) VMM通过处理器硬件功能使得客户机操作系统完全运行在不同的地址空间, 或通过段限制使客户机OS所能"看见"的空间大小, 以保证VMM自身的安全性, 从而防止虚拟机触及VMM自身的运行状态.
 
