--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -3,25 +3,25 @@
 
 <!-- code_chunk_output -->
 
-- [ 1 概述](#1-概述)
-  - [ 1.1 影子页表](#11-影子页表)
-  - [ 1.2 VT\-x支持](#12-vt-x支持)
-- [ 2 EPT](#2-ept)
-  - [ 2.1 EPT原理](#21-ept原理)
-    - [ 2.1.1 地址转换过程](#211-地址转换过程)
-  - [ 2.2 EPT的硬件支持](#22-ept的硬件支持)
-    - [ 2.2.1 VM-Execution控制域的Enable EPT字段](#221-vm-execution控制域的enable-ept字段)
-    - [ 2.2.2 VM-Execution控制域的Extended page table pointer字段](#222-vm-execution控制域的extended-page-table-pointer字段)
-    - [ 2.2.3 TLB、INVEPT指令和VPID](#223-tlb-invept指令和vpid)
-    - [ 2.2.4 VM\-Exit信息域的EPT Violation相关字段](#224-vm-exit信息域的ept-violation相关字段)
-  - [ 2.3 EPT的软件使用](#23-ept的软件使用)
-- [ 3 VPID](#3-vpid)
-  - [ 3.1 传统TLB](#31-传统tlb)
-  - [ 3.2 TLB项的VPID标识不同虚拟处理器的不同TLB](#32-tlb项的vpid标识不同虚拟处理器的不同tlb)
-  - [ 3.3 VPID的软件使用](#33-vpid的软件使用)
-- [ 4 Linux系统检查](#4-linux系统检查)
-  - [ 4.1 /proc/cpuinfo](#41-proccpuinfo)
-  - [ 4.2 sysfs文件系统](#42-sysfs文件系统)
+- [1 概述](#1-概述)
+  - [1.1 影子页表](#11-影子页表)
+  - [1.2 VT\-x支持](#12-vt-x支持)
+- [2 Intel EPT](#2-intel-ept)
+  - [2.1 EPT原理](#21-ept原理)
+    - [2.1.1 地址转换过程](#211-地址转换过程)
+  - [2.2 EPT的硬件支持](#22-ept的硬件支持)
+    - [2.2.1 VM-Execution控制域的Enable EPT字段](#221-vm-execution控制域的enable-ept字段)
+    - [2.2.2 VM-Execution控制域的Extended page table pointer字段](#222-vm-execution控制域的extended-page-table-pointer字段)
+    - [2.2.3 TLB、INVEPT指令和VPID](#223-tlb-invept指令和vpid)
+    - [2.2.4 VM\-Exit信息域的EPT Violation相关字段](#224-vm-exit信息域的ept-violation相关字段)
+  - [2.3 EPT的软件使用](#23-ept的软件使用)
+- [3 VPID](#3-vpid)
+  - [3.1 传统TLB](#31-传统tlb)
+  - [3.2 TLB项的VPID标识不同虚拟处理器的不同TLB](#32-tlb项的vpid标识不同虚拟处理器的不同tlb)
+  - [3.3 VPID的软件使用](#33-vpid的软件使用)
+- [4 Linux系统检查](#4-linux系统检查)
+  - [4.1 /proc/cpuinfo](#41-proccpuinfo)
+  - [4.2 sysfs文件系统](#42-sysfs文件系统)
 
 <!-- /code_chunk_output -->
 
@@ -29,7 +29,7 @@
 
 内存虚拟化的主要任务是实现地址空间的虚拟化.
 
-由于引入了**客户机物理地址空间**，**内存虚拟化**通过**两次地址转换**来支持地址空间的虚拟机, 即**客户机虚拟地址GVA**→**客户机物理地址GPA**→**宿主机物理地址HPA**的转换. 
+由于引入了**客户机物理地址空间**，**内存虚拟化**通过**两次地址转换**来支持地址空间的虚拟机, 即 **客户机虚拟地址GVA** → **客户机物理地址GPA** → **宿主机物理地址HPA**的转换. 
 
 其中, 
 
@@ -60,7 +60,7 @@
 
 此外, 为进一步**提高TLB的使用效率**, VT\-x还引入了**Virtual Processor ID(VPID**)功能, 进一步增强内存虚拟化性能.
 
-# 2 EPT
+# 2 Intel EPT
 
 ## 2.1 EPT原理
 
