--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
@@ -3,28 +3,28 @@
 
 <!-- code_chunk_output -->
 
-* [1 概述](#1-概述)
-* [2 设备发现](#2-设备发现)
-* [3 访问截获](#3-访问截获)
-	* [3.1 Port I/O](#31-port-io)
-		* [3.1.1 非直接分配](#311-非直接分配)
-		* [3.1.2 直接分配](#312-直接分配)
-	* [3.2 MMIO](#32-mmio)
-		* [3.2.1 非直接分配](#321-非直接分配)
-		* [3.2.2 直接分配](#322-直接分配)
-	* [3.3 中断](#33-中断)
-		* [3.3.1 非直接分配](#331-非直接分配)
-		* [3.3.2 直接分配](#332-直接分配)
-	* [3.4 DMA或类似的共享内存机制](#34-dma或类似的共享内存机制)
-* [4 设备模拟](#4-设备模拟)
-	* [4.1 基于软件的全虚拟化](#41-基于软件的全虚拟化)
-	* [4.2 半虚拟化](#42-半虚拟化)
-	* [4.3 基于硬件的直接分配（实际上已经不是设备模拟了）](#43-基于硬件的直接分配实际上已经不是设备模拟了)
-* [5 设备共享](#5-设备共享)
+- [概述](#概述)
+- [设备发现](#设备发现)
+- [访问截获](#访问截获)
+  - [Port I/O](#port-io)
+    - [非直接分配](#非直接分配)
+    - [3.1.2 直接分配](#312-直接分配)
+  - [3.2 MMIO](#32-mmio)
+    - [3.2.1 非直接分配](#321-非直接分配)
+    - [3.2.2 直接分配](#322-直接分配)
+  - [3.3 中断](#33-中断)
+    - [3.3.1 非直接分配](#331-非直接分配)
+    - [3.3.2 直接分配](#332-直接分配)
+  - [3.4 DMA或类似的共享内存机制](#34-dma或类似的共享内存机制)
+- [4 设备模拟](#4-设备模拟)
+  - [4.1 基于软件的全虚拟化](#41-基于软件的全虚拟化)
+  - [4.2 半虚拟化](#42-半虚拟化)
+  - [4.3 基于硬件的直接分配（实际上已经不是设备模拟了）](#43-基于硬件的直接分配实际上已经不是设备模拟了)
+- [5 设备共享](#5-设备共享)
 
 <!-- /code_chunk_output -->
 
-# 1 概述
+# 概述
 
 没有虚拟化的情形下. 给定一个外设, 定义有自己的一套供软件访问的接口, 这些接口的属性可能是单向的, 也可能是双向的. OS有外设的驱动, 它们接收来自其他模块(如用户进程)的请求, 然后按照外设规定好的方式驱动外设完成特定任务.驱动不关心外设的逻辑电路, 只要按照定义好的接口使用外设, 外设总会通过其内部逻辑电路完成动作. 由于处理器的核心地位, 因此外设的访问接口最终也会被映射为处理器所能认识的地址空间或其他资源. 这样, 当驱动通过指令方式访问外设, 处理器才能正确识别目标对象, 然后将相关请求发送到系统总线上, 最终由芯片组转发给目标外设. 下图是典型设备可能有的资源.
 
@@ -59,7 +59,7 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 虚拟完毕, 只要客户机OS有驱动按照该虚拟设备的接口定义, 就可以被客户机OS所使用.
 
-# 2 设备发现
+# 设备发现
 
 即让VMM提供一种方式, 来让客户机OS发现虚拟设备, 这样的客户机OS才能加载相关驱动, 这是I/O虚拟化的第一步. 设备发现取决于被虚拟的设备类型.
 
@@ -73,19 +73,19 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 这种情况下，没有一个现实中的规范与之对应，**这种虚拟设备**所处的**总线类型**完全由**VMM自行决定**，VMM可以选择将虚拟设备挂在PCI总线上，也可以完全**自定义一套新的虚拟总线协议**，这样的话**客户机操作系统**必须加装**新的总线驱动**。
 
-# 3 访问截获
+# 访问截获
 
 **虚拟设备**被客户机操作系统**发现**后，**客户机操作系统**中的**驱动**会按照**接口定义**访问这个虚拟设备。此时**VMM**必须**截获驱动对虚拟设备的访问**，并**进行模拟**。 可以毫不犹豫的说, 关键点在于处理器虚拟化.
 
-## 3.1 Port I/O
+## Port I/O
 
 对于**端口I/O**，**处理器对于端口I/O资源的控制**在于**指令流所处的特权级别**和**相关I/O位图**. 
 
-### 3.1.1 非直接分配
+### 非直接分配
 
 对于一个**非直接分配**给客户机OS使用的设备, **客户OS**运行在一个**非特权环境**中, 所以**客户OS**能否访问**给定I/O端口**就完全由**I/O位图**决定. 自然地, **VMM**完全可以将设备的**所有端口I/O从I/O位图中关闭**, 这样, 当客户指令流在访问该I/O端口时, 物理处理器就会及时**抛出一个保护异常**, 然后VMM就能获取异常原因, 然后将请求发送给设备模拟器进行模拟. 
 
-### 3.1.2 直接分配
+### 直接分配
 
 相反, 对于一个**直接分配**给客户机OS的设备, **VMM**可以将该设备所属端口I/O从**I/O位图**中**打开**, 这样处理器就把访问发送到系统总线, 最终到达目标物理设备而**不被模拟**. 
 
