--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
@@ -3,28 +3,28 @@
 
 <!-- code_chunk_output -->
 
-- [概述](#概述)
-- [设备发现](#设备发现)
-- [访问截获](#访问截获)
-  - [Port I/O](#port-io)
-    - [非直接分配](#非直接分配)
-    - [3.1.2 直接分配](#312-直接分配)
-  - [3.2 MMIO](#32-mmio)
-    - [3.2.1 非直接分配](#321-非直接分配)
-    - [3.2.2 直接分配](#322-直接分配)
-  - [3.3 中断](#33-中断)
-    - [3.3.1 非直接分配](#331-非直接分配)
-    - [3.3.2 直接分配](#332-直接分配)
-  - [3.4 DMA或类似的共享内存机制](#34-dma或类似的共享内存机制)
-- [4 设备模拟](#4-设备模拟)
-  - [4.1 基于软件的全虚拟化](#41-基于软件的全虚拟化)
-  - [4.2 半虚拟化](#42-半虚拟化)
-  - [4.3 基于硬件的直接分配（实际上已经不是设备模拟了）](#43-基于硬件的直接分配实际上已经不是设备模拟了)
-- [5 设备共享](#5-设备共享)
+- [1. 概述](#1-概述)
+- [2. 设备发现](#2-设备发现)
+- [3. 访问截获](#3-访问截获)
+  - [3.1. Port I/O](#31-port-io)
+    - [3.1.1. 非直接分配](#311-非直接分配)
+    - [3.1.2. 直接分配](#312-直接分配)
+  - [3.2. MMIO](#32-mmio)
+    - [3.2.1. 非直接分配](#321-非直接分配)
+    - [3.2.2. 直接分配](#322-直接分配)
+  - [3.3. 中断](#33-中断)
+    - [3.3.1. 非直接分配](#331-非直接分配)
+    - [3.3.2. 直接分配](#332-直接分配)
+  - [3.4. DMA或类似的共享内存机制](#34-dma或类似的共享内存机制)
+- [4. 设备模拟](#4-设备模拟)
+  - [4.1. 基于软件的全虚拟化](#41-基于软件的全虚拟化)
+  - [4.2. 半虚拟化](#42-半虚拟化)
+  - [4.3. 基于硬件的直接分配（实际上已经不是设备模拟了）](#43-基于硬件的直接分配实际上已经不是设备模拟了)
+- [5. 设备共享](#5-设备共享)
 
 <!-- /code_chunk_output -->
 
-# 概述
+# 1. 概述
 
 没有虚拟化的情形下. 给定一个外设, 定义有自己的一套供软件访问的接口, 这些接口的属性可能是单向的, 也可能是双向的. OS有外设的驱动, 它们接收来自其他模块(如用户进程)的请求, 然后按照外设规定好的方式驱动外设完成特定任务.驱动不关心外设的逻辑电路, 只要按照定义好的接口使用外设, 外设总会通过其内部逻辑电路完成动作. 由于处理器的核心地位, 因此外设的访问接口最终也会被映射为处理器所能认识的地址空间或其他资源. 这样, 当驱动通过指令方式访问外设, 处理器才能正确识别目标对象, 然后将相关请求发送到系统总线上, 最终由芯片组转发给目标外设. 下图是典型设备可能有的资源.
 
@@ -59,7 +59,7 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 虚拟完毕, 只要客户机OS有驱动按照该虚拟设备的接口定义, 就可以被客户机OS所使用.
 
-# 设备发现
+# 2. 设备发现
 
 即让VMM提供一种方式, 来让客户机OS发现虚拟设备, 这样的客户机OS才能加载相关驱动, 这是I/O虚拟化的第一步. 设备发现取决于被虚拟的设备类型.
 
@@ -73,63 +73,63 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 这种情况下，没有一个现实中的规范与之对应，**这种虚拟设备**所处的**总线类型**完全由**VMM自行决定**，VMM可以选择将虚拟设备挂在PCI总线上，也可以完全**自定义一套新的虚拟总线协议**，这样的话**客户机操作系统**必须加装**新的总线驱动**。
 
-# 访问截获
+# 3. 访问截获
 
 **虚拟设备**被客户机操作系统**发现**后，**客户机操作系统**中的**驱动**会按照**接口定义**访问这个虚拟设备。此时**VMM**必须**截获驱动对虚拟设备的访问**，并**进行模拟**。 可以毫不犹豫的说, 关键点在于处理器虚拟化.
 
-## Port I/O
+## 3.1. Port I/O
 
 对于**端口I/O**，**处理器对于端口I/O资源的控制**在于**指令流所处的特权级别**和**相关I/O位图**. 
 
-### 非直接分配
+### 3.1.1. 非直接分配
 
 对于一个**非直接分配**给客户机OS使用的设备, **客户OS**运行在一个**非特权环境**中, 所以**客户OS**能否访问**给定I/O端口**就完全由**I/O位图**决定. 自然地, **VMM**完全可以将设备的**所有端口I/O从I/O位图中关闭**, 这样, 当客户指令流在访问该I/O端口时, 物理处理器就会及时**抛出一个保护异常**, 然后VMM就能获取异常原因, 然后将请求发送给设备模拟器进行模拟. 
 
-### 直接分配
+### 3.1.2. 直接分配
 
 相反, 对于一个**直接分配**给客户机OS的设备, **VMM**可以将该设备所属端口I/O从**I/O位图**中**打开**, 这样处理器就把访问发送到系统总线, 最终到达目标物理设备而**不被模拟**. 
 
-## 3.2 MMIO
+## 3.2. MMIO
 
 对于**MMIO**，MMIO本身也是**物理地址空间的一部分**, 而物理地址空间的访问控制是通过**页表来控制**的. 
 
-### 3.2.1 非直接分配
+### 3.2.1. 非直接分配
 
 对于**非直接分配**给客户机OS使用的设备, 在物理处理器遍历的**真实页表**里, **VMM**只要把**映射到该MMIO的页表项**设为**无效**，当**客户机指令流试图再访问目标地址**时, 物理处理器就会抛出**缺页异常**，从而**陷入到VMM**中，VMM遍历客户页表, 就能发现设备所属的MMIO资源, 然后将请求交给**设备模拟器进行模拟**。
 
-### 3.2.2 直接分配
+### 3.2.2. 直接分配
 
 相反, 对于**直接分配**给客户OS使用的设备, VMM只需要按照客户页表的设置**打开真实页表映射**即可, 这样客户机OS对该设备的访问也**不再被模拟**.
 
-## 3.3 中断
+## 3.3. 中断
 
 对于**中断**. 
 
-### 3.3.1 非直接分配
+### 3.3.1. 非直接分配
 
 对于**非直接分配**, 假设该设备可以产生中断, 那么VMM只要提供一种机制，供**设备模拟器**在接收到**物理中断**并需要**触发中断时**，可以通知到**虚拟中断逻辑**，然后由**虚拟中断逻辑模拟一个虚拟中断的注入**。
 
-### 3.3.2 直接分配
+### 3.3.2. 直接分配
 
 相反, 对于直接分配的, **VMM物理中断处理函数**在**接收到物理中断**后, 辨认出**中断源属于某个客户机**, 然后通知该客户机的虚拟中断逻辑.
 
-## 3.4 DMA或类似的共享内存机制
+## 3.4. DMA或类似的共享内存机制
 
 如果设备可以提供**DMA或类似的共享内存机制**, DMA允许**设备绕过处理器直接访问目标内存**, 而**若客户机OS驱动程序是未经修改**的, 则**设备模拟器**接收到的 **DMA目标地址** 是 **客户机物理地址！！！**. 
 
 因此, VMM只要提供**一种机制**, 让**设备模拟器**了解各种**地址之间转换关系！！！	**, 从而可以把**客户机物理地址**映射成**自己的虚拟地址**, 就能真正做到DMA目标地址的访问.
 
-# 4 设备模拟
+# 4. 设备模拟
 
 上一步中我们已经多次提到，下面分类介绍下设备模拟。
 
-## 4.1 基于软件的全虚拟化
+## 4.1. 基于软件的全虚拟化
 
 **虚拟设备**与**现实设备**具有**完全一样的接口定义**。这种情况下，**VMM的设备模拟器**需要仔细研究现实设备的接口定义和内部设计规范，然后以**软件的方式**模拟真实逻辑电路来满足每个接口的定义和效果, 例如PS/2键盘、鼠标等。现实设备具有哪些资源，设备模拟器就需要呈现出同样的资源。这种情况下，**客户机操作系统原有的驱动程序无需修改**就能驱动虚拟设备。**设备访问过程**中，**VMM**通过**截获驱动程序对设备的访问进行模拟**。
 
 举例：qemu, VMware Workstation
 
-## 4.2 半虚拟化
+## 4.2. 半虚拟化
 
 给**客户机操作系统**提供一个**特定的驱动程序（称为前端, Front\-end, FE**），**VMM**中的**模拟程序称为后端(Back\-End, BE**)设备驱动，**前端**将来自于其他模块的请求通过**VMM提供的特殊通信机制**直接发送给**后端**，**后端处理完**请求后再**发回通知给前者**。
 
@@ -139,7 +139,7 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 ![config](./images/7.png)
 
-## 4.3 基于硬件的直接分配（实际上已经不是设备模拟了）
+## 4.3. 基于硬件的直接分配（实际上已经不是设备模拟了）
 
 直接将**物理设备**分配给**客户机操作系统**，由**客户机操作系统直接访问目标设备！！！**。这种情况下**实际上不存在设备模拟**，**客户机**直接通过**原有的驱动无缝**操作**真实硬件**。这种方式从**性能上说是最优**的，但这种方式需要比**较多的硬件资源**。
 
@@ -155,7 +155,7 @@ I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取
 
 ![](./images/2019-05-14-09-44-58.png)
 
-# 5 设备共享
+# 5. 设备共享
 
 有些认为SR\-IOV也是设备共享的一种, 比如上襦
 
