--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
@@ -9,6 +9,7 @@
     - [1.1.2. 通用性的挑战](#112-通用性的挑战)
   - [1.2. 问题的解决](#12-问题的解决)
 - [2. VT-d技术](#2-vt-d技术)
+  - [DMA重映射](#dma重映射)
   - [2.1. DMA重映射(DMA Remapping)](#21-dma重映射dma-remapping)
     - [2.1.1. BDF标识DMA操作发起者](#211-bdf标识dma操作发起者)
     - [2.1.2. 根条目和上下文条目](#212-根条目和上下文条目)
@@ -53,9 +54,11 @@ VT\-d如何实现这两个指标呢?
 
 ## 1.2. 问题的解决
 
-**VT\-x！！！**已经能够解决**第一个问题**, 可以允许**客户机直接访问物理的I/O空间！！！**. 
+对于第一个问题，**只需一种机制**就能够把**设备的 I/O 地址空间**告诉给**客户机操作系统**，并让**驱动**通过这**些地址**访问到**设备真实的I/O地址空间**。**VT\-x！！！**已经能够解决**第一个问题**, 可以允许**客户机直接访问物理的I/O空间！！！**. 
 
 **VT\-d**让**第二个问题**解决成为可能, 它提供了**DMA重映射技术！！！**, 帮助VMM的实现者达成目标.
+
+# 2. VT-d技术
 
 VT\-d通过在**北桥(MCH**)引入**DMA重映射硬件**, 以提供 **设备重映射！！！** 和 **设备直接分配！！！** 的功能. 
 
@@ -77,7 +80,7 @@ VT\-d通过在**北桥(MCH**)引入**DMA重映射硬件**, 以提供 **设备重
 
 下面介绍VT\-d中核心的**DMA重映射技术**以及**如何探测DMA重映射硬件**, **设备分配**内容在6.7介绍. VT\-d技术较复杂, 限于篇幅, 只能对主要技术进行介绍, 完整的论述参考"**Intel(R) Virtualization Technology for Directed I/O Architecture Specification**".
 
-# 2. VT-d技术
+## DMA重映射
 
 上节提到的诸多难点, 最主要的难题是**DMA问题**. 设备对系统中运行的软件一无所知, 在**进行DMA**时, 设备**唯一**做的是**向(从)驱动程序告知的"物理地址"复制(读取)数据**. 
 
