--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
@@ -78,7 +78,11 @@ VT\-d通过在**北桥(MCH**)引入**DMA重映射硬件**, 以提供 **设备重
 
 注意: (b)中的**DMA Remapping Hardware硬件**的位置和作用, 它会**捕获设备的DMA操作**
 
-下面介绍VT\-d中核心的**DMA重映射技术**以及**如何探测DMA重映射硬件**, **设备分配**内容在6.7介绍. VT\-d技术较复杂, 限于篇幅, 只能对主要技术进行介绍, 完整的论述参考"**Intel(R) Virtualization Technology for Directed I/O Architecture Specification**".
+注: 不仅仅是**DMA重映射**, Intel VT\-d为虚拟机监控器提供了几个重要的能力：**I/O设备分配**、**DMA重定向**、**中断重定向**、**中断投递**等。
+
+对应的AMD是IOMMU技术
+
+下面介绍VT\-d中核心的**DMA重映射技术**以及**如何探测DMA重映射硬件**, **设备分配**内容在下一节介绍. VT\-d技术较复杂, 限于篇幅, 只能对主要技术进行介绍, 完整的论述参考"**Intel(R) Virtualization Technology for Directed I/O Architecture Specification**".
 
 ## DMA重映射
 
@@ -86,11 +90,7 @@ VT\-d通过在**北桥(MCH**)引入**DMA重映射硬件**, 以提供 **设备重
 
 内存虚拟化中可知, **虚拟机环境**下**客户机使用的是GPA**, 则**客户机**的**驱动直接操作设备时也是用GPA！！！**. 
 
-而**设备进行DMA**, 需要使用**MPA**, 如何在DMA时将GPA转换成MPA成了关键问题. 通常, 无法通过软件方法截获DMA操作, VT\-d提供的DMA重映射就是为了解决这个问题.
-
-注: 不仅仅是DMA重映射, Intel VT\-d为虚拟机监控器提供了几个重要的能力：**I/O设备分配**、**DMA重定向**、**中断重定向**、**中断投递**等。
-
-对应的AMD是IOMMU技术
+而**设备进行DMA**, 需要使用**MPA！！！**, 如何在DMA时将GPA转换成MPA成了关键问题. 通常, **无法通过软件方法截获DMA操作**, VT\-d提供的DMA重映射就是为了解决这个问题.
 
 ## 2.1. DMA重映射(DMA Remapping)
 
