--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/6. IO虚拟化的硬件支持.md
@@ -243,3 +243,24 @@ Register Base Address是这个unit硬件寄存器的基地址
 
 # 3. AMD IOMMU
 
+AMD的IOMMU（输入/输出内存管理单元）技术提供了I/O虚拟化的解决方案，管理对系统内存的设备访问。它位于外围设备和主机之间，可以把DMA I/O总线和PC系统主内存连接在一起，将虚拟内存地址映射为物理内存地址，并检查每个接入的适当权限。图2-17是IOMMU技术的简单示意图。
+
+AMD的IOMMU设计提供DMA地址转换、对设备读取和写入的权限检查的功能。有了 IOMMU，客户机操作系统中一个未经修改的驱动程序可以直接访问它的目标设备，从而避免通过VMM运行而产生的开销以及设备模拟的开销。将地址转译与访问保护相结合，是IOMMU的重要特色。
+￼
+图2-17 IOMMU技术示意图:
+
+![2019-12-12-17-15-44.png](./images/2019-12-12-17-15-44.png)
+
+IOMMU 为每个设备分配一个保护域。保护域定义了 I/O 页的转译将被用于域中的每个设备，并且明确指明每个I/O页的读取权限。虚拟化环境下，VMM可以指定所有的设备分配到相同保护域中的一个特定操作系统，这将创建一系列为运行在客户机操作系统中运行所有的设备所使用的地址转译和访问限制。
+
+IOMMU 将页转译缓存在一个 TLB 中，进入 TLB 需要键入保护域和设备请求地址。而保护域是缓存密钥的一部分，故域中的所有设备共享TLB中的缓存地址。
+
+IOMMU 决定一台设备属于哪个保护域，然后使用这个域和设备请求地址进入TLB。TLB入口包含读写权限标记和用于转译的目标系统地址，所以，在登入缓存时会根据许可标记决定该缓存是否允许此次访问。
+
+对于不在TLB中的地址，IOMMU将会继续查看设备相关的I/O页表格。与TLB入口类似，I/O设备页表格的入口也包括连接到系统地址的许可信息。
+
+因此，所有的地址转译最终都是一次TLB或页表查看，如果查看成功，适当的权限标记会告诉 IOMMU是否允许访问。VMM通过控制 IOMMU来查看地址的 I/O 页表格，实现对应的系统页和系统设备的控制，以及对每个域中每个页的读/写访问权限的控制。
+
+IOMMU通过允许VMM直接将真实的设备分配到客户机操作系统，使I/O虚拟化更有效。VMM通过控制IOMMU，可以创建I/O页表将系统物理地址映射到客户机物理地址，为客户机操作系统创建一个保护域，然后让客户机操作系统在此域中正常运转。针对真实的设备编写的驱动程序可以继续作为客户机操作系统的一部分运行（客户机操作系统必须是未经修改的且对底层转译无感知）。
+
+AMD 的 IOMMU 避免了设备模拟，取消了转译层，而且允许本机驱动程序直接配合设备，极大地降低了I/O设备虚拟化的开销。
