--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/9. 时间虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/9. 时间虚拟化.md
@@ -6,8 +6,10 @@
 - [1. 操作系统的时间概念](#1-操作系统的时间概念)
 - [2. 客户机的时间概念](#2-客户机的时间概念)
 - [3. 时钟设备仿真](#3-时钟设备仿真)
-  - [客户机不会被调度出去的情况](#客户机不会被调度出去的情况)
-    - [3.2. PIT的时钟计数器](#32-pit的时钟计数器)
+  - [3.1. 客户机不会被调度出去的情况](#31-客户机不会被调度出去的情况)
+    - [3.1.1. PIT的时钟中断](#311-pit的时钟中断)
+    - [3.1.2. PIT的时钟计数器](#312-pit的时钟计数器)
+  - [客户机被调度出去的情况](#客户机被调度出去的情况)
 - [4. 实现客户机时间概念的一种方法 --- 丢失中断连续注入](#4-实现客户机时间概念的一种方法-丢失中断连续注入)
 - [5. 实现客户机时间概念的另一种方法](#5-实现客户机时间概念的另一种方法)
   - [5.1. 上面方法的缺陷](#51-上面方法的缺陷)
@@ -66,17 +68,19 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 为实现时间设备的虚拟化, **VMM**必须提供**软件定时器机制**, 使得程序可以在**设定的某个未来时间执行一段代码**, 同时还提供**接口**, 使得程序可以了解**当前的实际时间**.
 
-## 客户机不会被调度出去的情况
+## 3.1. 客户机不会被调度出去的情况
+
+### 3.1.1. PIT的时钟中断
 
 假定**客户机OS**设定PIT时钟**中断频率**为10ms, VMM截获这个设定(截获方法参考**I/O虚拟化**), 并通知**PIT设备模型**. 
 
-**PIT设备模型**会**向VMM注册**一个间隔为10ms的**软件定时器！！！**, 并提供**回调函数**, 这个**函数功能**就是向**客户机注入一个时钟中断！！！**.
+**PIT设备模型**会**向VMM！！！注册**一个间隔为10ms的**软件定时器！！！**, 并提供**回调函数**, 这个**函数功能**就是向**客户机注入一个时钟中断！！！**.
 
-在**客户机不被调度出去**的情况下，每隔10ms，**VMM**都会**调用这个回调函数**向客户机**注入一个时钟中断**。
+在**客户机不被调度出去！！！** 的情况下，每隔10ms，**VMM！！！**都会**调用这个回调函数**向客户机**注入一个时钟中断**。
 
 具体中断注入参考中断虚拟化相关章节.
 
-### 3.2. PIT的时钟计数器
+### 3.1.2. PIT的时钟计数器
 
 当客户机**读取PIT**的**Counter寄存器**时, **PIT设备模型**通过VMM了解当前的**实际时间！！！**, 并**减去PIT的事件计数器**被初始化时的实际时间, 以得到**流逝时间**, 经过**PIT频率转换**后返回给客户机.
 
@@ -84,15 +88,21 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 由于OS可依赖**多个时钟设备**实现内部时间的维护, 因此, 当VMM提供**多个时钟设备的仿真**时, 需要保证**各个设备模型**之间的**时间一致性**.
 
-# 4. 实现客户机时间概念的一种方法 --- 丢失中断连续注入
+## 客户机被调度出去的情况
 
 下面讨论当**客户机被调度出去**的情况下, 如何通过**设备仿真**实现**客户机的时间概念**, 以使**客户机时间等于实际的时间**. 
 
-如图5\-25, 假定客户机在t2时候被调度出去, 在t5被调度进来. 这个过程中, 根据客户机OS对虚拟PIT的设置, 在t3和t4需要插入时钟中断, 以使得客户机OS能维持内部的时间计数. 然而, t3和t4时候客户机并没有运行, 因此, VMM没有机会将中断注入给客户机.
+图2-23 客户机被调度出去情况下时间概念的实现:
 
-![](./images/2019-04-16-13-15-59.png)
+![2019-12-12-17-37-25.png](./images/2019-12-12-17-37-25.png)
 
-通常做法是, 当客户机在t5时刻被调度回来, **VMM**连续将**t3、t4时刻丢掉**的两个**时钟中断连续注入**客户机. "连续"指, 当客户机处理完**t3的时钟中断**后, 立刻把t4时刻的时钟中断注入给客户机, 在客户OS看来就是在一个**时钟中断处理**完后另一个时钟中断**紧接着发生**了. 由于这个过程没有其他的程序被运行, 因此, 当应用程序会内核中需要时间服务的程序运行的时候, t3和t4丢失的时钟中断都已补偿给客户机了. 这样, VMM保证了**客户机内部的时间！！！**与**实际时间一致！！！**. 当然, 如果在**OS的时钟中断函数**中, 有**需要时钟服务的代码**运行, 那么这些代码仍然会**得到不正确的时间**. 但, OS为保证中断的快速反应, 通常并不会出现这种情况.
+如图5\-25, 假定客户机在t2时候被调度出去, 在t5被调度进来. 
+
+这个过程中, 根据客户机OS对**虚拟PIT**的设置, 在**t3**和**t4**需要插入时钟中断, 以使得客户机OS能维持内部的时间计数. 然而, t3和t4时候客户机并没有运行, 因此, VMM没有机会将中断注入给客户机.
+
+# 4. 实现客户机时间概念的一种方法 --- 丢失中断连续注入
+
+通常做法是, 当客户机在**t5时刻！！！** 被调度回来, **VMM**连续将**t3、t4时刻丢掉**的两个**时钟中断连续！！！注入**客户机. "连续"指, 当客户机处理完**t3的时钟中断！！！** 后, 立刻把t4时刻的时钟中断注入给客户机, 在客户OS看来就是在一个**时钟中断处理**完后另一个时钟中断**紧接着发生**了. 由于这个过程没有其他的程序被运行, 因此, 当应用程序会内核中需要时间服务的程序运行的时候, t3和t4丢失的时钟中断都已补偿给客户机了. 这样, VMM保证了**客户机内部的时间！！！**与**实际时间一致！！！**. 当然, 如果在**OS的时钟中断函数**中, 有**需要时钟服务的代码**运行, 那么这些代码仍然会**得到不正确的时间**. 但, OS为保证中断的快速反应, 通常并不会出现这种情况.
 
 图5\-26给出实现这一过程的示意. 当客户机在t5时刻被调度运行时, VMM立刻注入t3'时刻的时钟中断给客户机, 使得客户机的时钟概念跳变到t3', 客户机在t5'时候执行完t3'中断的中断处理函数后, VMM立刻注入t4'时刻的时钟中断, 使得客户机时钟跳变到t4'. 由于客户机处理函数执行速度很快, 因此(t5' \- t5)远远小于(t6 \- t5).
 
