--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/9. 时间虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/9. 时间虚拟化.md
@@ -9,12 +9,12 @@
   - [3.1. 客户机不会被调度出去的情况](#31-客户机不会被调度出去的情况)
     - [3.1.1. PIT的时钟中断](#311-pit的时钟中断)
     - [3.1.2. PIT的时钟计数器](#312-pit的时钟计数器)
-  - [客户机被调度出去的情况](#客户机被调度出去的情况)
-- [4. 实现客户机时间概念的一种方法 --- 丢失中断连续注入](#4-实现客户机时间概念的一种方法-丢失中断连续注入)
-- [5. 实现客户机时间概念的另一种方法](#5-实现客户机时间概念的另一种方法)
-  - [5.1. 上面方法的缺陷](#51-上面方法的缺陷)
-  - [5.2. 另一种方法 --- 计数器修正](#52-另一种方法-计数器修正)
-- [6. 如何满足客户机时间不等于实际时间的需求](#6-如何满足客户机时间不等于实际时间的需求)
+  - [3.2. 客户机被调度出去的情况](#32-客户机被调度出去的情况)
+    - [3.2.1. 实现客户机时间概念的一种方法 --- 丢失中断连续注入](#321-实现客户机时间概念的一种方法-丢失中断连续注入)
+    - [3.2.2. 实现客户机时间概念的另一种方法](#322-实现客户机时间概念的另一种方法)
+      - [3.2.2.1. 上面方法的缺陷](#3221-上面方法的缺陷)
+      - [3.2.2.2. 另一种方法 --- 计数器修正](#3222-另一种方法-计数器修正)
+- [4. 如何满足客户机时间不等于实际时间的需求](#4-如何满足客户机时间不等于实际时间的需求)
 
 <!-- /code_chunk_output -->
 
@@ -76,7 +76,7 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 **PIT设备模型**会**向VMM！！！注册**一个间隔为10ms的**软件定时器！！！**, 并提供**回调函数**, 这个**函数功能**就是向**客户机注入一个时钟中断！！！**.
 
-在**客户机不被调度出去！！！** 的情况下，每隔10ms，**VMM！！！**都会**调用这个回调函数**向客户机**注入一个时钟中断**。
+在**客户机不被调度出去！！！** 的情况下，每隔10ms，**VMM！！！**都会**调用这个回调函数！！！** 向客户机**注入一个时钟中断**。
 
 具体中断注入参考中断虚拟化相关章节.
 
@@ -88,32 +88,35 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 由于OS可依赖**多个时钟设备**实现内部时间的维护, 因此, 当VMM提供**多个时钟设备的仿真**时, 需要保证**各个设备模型**之间的**时间一致性**.
 
-## 客户机被调度出去的情况
+## 3.2. 客户机被调度出去的情况
 
 下面讨论当**客户机被调度出去**的情况下, 如何通过**设备仿真**实现**客户机的时间概念**, 以使**客户机时间等于实际的时间**. 
 
-图2-23 客户机被调度出去情况下时间概念的实现:
+图2-25 客户机被调度出去情况下时间概念的实现:
 
 ![2019-12-12-17-37-25.png](./images/2019-12-12-17-37-25.png)
 
 如图5\-25, 假定客户机在t2时候被调度出去, 在t5被调度进来. 
 
-这个过程中, 根据客户机OS对**虚拟PIT**的设置, 在**t3**和**t4**需要插入时钟中断, 以使得客户机OS能维持内部的时间计数. 然而, t3和t4时候客户机并没有运行, 因此, VMM没有机会将中断注入给客户机.
+这个过程中, 根据客户机OS对**虚拟PIT**的设置, 在**t3**和**t4**需要**插入时钟中断**, 以使得客户机OS能维持内部的时间计数. 然而, t3和t4时候客户机并没有运行, 因此, **VMM没有机会**将**中断注入给客户机**.
 
-# 4. 实现客户机时间概念的一种方法 --- 丢失中断连续注入
+### 3.2.1. 实现客户机时间概念的一种方法 --- 丢失中断连续注入
 
-通常做法是, 当客户机在**t5时刻！！！** 被调度回来, **VMM**连续将**t3、t4时刻丢掉**的两个**时钟中断连续！！！注入**客户机. "连续"指, 当客户机处理完**t3的时钟中断！！！** 后, 立刻把t4时刻的时钟中断注入给客户机, 在客户OS看来就是在一个**时钟中断处理**完后另一个时钟中断**紧接着发生**了. 由于这个过程没有其他的程序被运行, 因此, 当应用程序会内核中需要时间服务的程序运行的时候, t3和t4丢失的时钟中断都已补偿给客户机了. 这样, VMM保证了**客户机内部的时间！！！**与**实际时间一致！！！**. 当然, 如果在**OS的时钟中断函数**中, 有**需要时钟服务的代码**运行, 那么这些代码仍然会**得到不正确的时间**. 但, OS为保证中断的快速反应, 通常并不会出现这种情况.
+通常做法是, 当客户机在**t5时刻！！！** 被调度回来, **VMM**连续将**t3、t4时刻丢掉**的两个**时钟中断连续！！！注入**客户机. "连续"指, 当客户机处理完**t3的时钟中断！！！** 后, 立刻把t4时刻的时钟中断注入给客户机, 在客户OS看来就是在一个**时钟中断处理**完后另一个时钟中断**紧接着发生**了. 由于这个过程没有其他的程序被运行, 因此, 当应用程序会内核中需要时间服务的程序运行的时候, t3和t4丢失的时钟中断都已补偿给客户机了. 这样, VMM保证了**客户机内部的时间！！！**与**实际时间一致！！！**. 
+
+当然, 如果在**OS的时钟中断函数**中, 有**需要时钟服务的代码**运行, 那么这些代码仍然会**得到不正确的时间**. 但, OS为保证中断的快速反应, 通常并不会出现这种情况.
 
 图5\-26给出实现这一过程的示意. 当客户机在t5时刻被调度运行时, VMM立刻注入t3'时刻的时钟中断给客户机, 使得客户机的时钟概念跳变到t3', 客户机在t5'时候执行完t3'中断的中断处理函数后, VMM立刻注入t4'时刻的时钟中断, 使得客户机时钟跳变到t4'. 由于客户机处理函数执行速度很快, 因此(t5' \- t5)远远小于(t6 \- t5).
 
-![](./images/2019-04-16-13-42-48.png)
+图2-26 客户机被调度出去情况下中断注入的微观示意图:
 
+![2019-12-12-17-40-45.png](./images/2019-12-12-17-40-45.png)
 
 设备模型中**计数器**的实现. 图5\-26中, 在t5'后, 由于所有中断都已经被注入到客户机内, **客户机的时钟**已经调整到和**实际时间一致**, 设备模型中计数器的值与实际时间也是一致的. 而在**t5到t5'**的过程中, 由于**客户机的时钟概念仍然停留在t3时刻**, 因此计数器的返回值也应该在t3和t4之间. 由于t5到t5'的时间非常短, 因此, 具体在t3和t4之间的那个点依赖具体实现.
 
-# 5. 实现客户机时间概念的另一种方法
+### 3.2.2. 实现客户机时间概念的另一种方法
 
-## 5.1. 上面方法的缺陷
+#### 3.2.2.1. 上面方法的缺陷
 
 上面方法存在一些问题. 
 
@@ -121,9 +124,9 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 - 由于把客户机调度出去时的时钟中断补偿给客户机, 因此它对系统性能会有影响, 特别是运行客户机比较多的时候, 时钟中断的补偿会消耗很多的时间. 
 
-- 其次, 在SMP情况下, 各个VCPU之间tsc的同步存在一些问题.
+- 其次, 在SMP情况下, **各个VCPU**之间tsc的同步存在一些问题.
 
-## 5.2. 另一种方法 --- 计数器修正
+#### 3.2.2.2. 另一种方法 --- 计数器修正
 
 前面说到, 时钟虚拟化的主要目的是保护客户机内部时间概念的正确性, 因此, 可以针对OS特定的时间概念维护机制, 修改VMM时间虚拟化的方法. 
 
@@ -137,7 +140,7 @@ x86系统中**时间设备**包括**PIT**、**HPET**、**ACPI PM Timer**和**TSC
 
 以图5\-25为例, 在t5时刻客户机被重新调度运行的时候, VMM并不需要将t3/t4时刻的时钟中断注入客户机, 而只需要注入一次. 当客户机的时钟中断处理函数读取时钟设备的计数器时, 直接返回实际时间. 客户机OS通过检查计数器返回值, 就可以知道错过了t3/t4的时钟中断, 并将自己的时间概念更新到t5.
 
-# 6. 如何满足客户机时间不等于实际时间的需求
+# 4. 如何满足客户机时间不等于实际时间的需求
 
 前面讨论了**如何通过设备仿真**, 使**客户机内部的时间概念**与**实际的时间相等**. 然而, 有些应用需要**客户机时间等于客户机实际运行的时间！！！**, 例如**进程记账软件**. 
 
