--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
@@ -32,6 +32,10 @@
   - [5.3. VM-Exit控制域](#53-vm-exit控制域)
   - [5.4. VM-Exit信息域](#54-vm-exit信息域)
   - [5.5. VM-Exit的具体过程](#55-vm-exit的具体过程)
+- [6. AMD SVM](#6-amd-svm)
+  - [6.1. 两种操作模式](#61-两种操作模式)
+  - [6.2. VMCB](#62-vmcb)
+  - [6.3. 新的指令](#63-新的指令)
 
 <!-- /code_chunk_output -->
 
@@ -385,3 +389,23 @@ VM\-Exit信息域满足了这个要求, 其**提供的信息**可分为如下四
 ⓸ CPU由非根模式切换到根模式, 从**宿主机状态域**中**CS:RIP**指定的VM\-Exit入口函数开始执行.
 
 VMM处理完VM\-Exit后, 会通过VMLANUCH/VMRESUME指令发起VM\-Entry进而重新运行客户机. 
+
+# 6. AMD SVM
+
+AMD SVM在处理器上提供了硬件资源，允许单个机器高效地运行多个操作系统，并维护安全和资源相互隔离。
+
+## 6.1. 两种操作模式
+
+与 VT-x类似，AMD SVM也引入了根模式和非根模式两种操作模式，非根模式下的敏感指令引起的“陷入”称为VM-Exit，VMM 调度某个客户机运行时，CPU 由根模式切换成非根模式称为VM-Entry。
+
+## 6.2. VMCB
+
+AMD SVM引入了VMCB（Virtual-Machine Control Block，虚拟机控制块），以便更好地支持CPU虚拟化。
+
+VMCB相当于Intel VT-x中的VMCS，只是**VMCS**由控制区、Guest 状态区和 Host 状态区三部分构成，VMCB 由控制区、Guest状态区两部分组成。
+
+SVM 的 Host 状态区需要**手工分配内存**，并将地址保存在**HSA MSR**中。
+
+## 6.3. 新的指令
+
+此外，SVM还引入了一组新的指令，包括VMRUN用于发起VM-Entry， VMSAVE/VMLOAD 用于配置 VMCB，STGI/CLGI 用于配置 GIF（Global Interrupt Flag，全局中断标识）的值。
