--- Auto-Git Commit ---

--- a/Linux/Learning/Linux内核分析与应用/第1章 概述/1. Linux操作系统概述.md
+++ b/Linux/Learning/Linux内核分析与应用/第1章 概述/1. Linux操作系统概述.md
@@ -108,7 +108,7 @@ Linux/UNIX设计理念: 机制与策略分离
 
 分布式操作系统: 何炎祥 <分布式操作系统> 高等教育出版社 2005年1月
 
-Andrew S.tanenbaum <DIstributed Operating Systems> 机械工业出版社 2006
+Andrew S.tanenbaum <Distributed Operating Systems> 机械工业出版社 2006
 
 ![2019-09-14-22-10-44.png](./images/2019-09-14-22-10-44.png)
 
