--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -22,6 +22,7 @@
 - [4. Linux系统检查](#4-linux系统检查)
   - [4.1. /proc/cpuinfo](#41-proccpuinfo)
   - [4.2. sysfs文件系统](#42-sysfs文件系统)
+- [AMD NPT](#amd-npt)
 
 <!-- /code_chunk_output -->
 
@@ -228,3 +229,6 @@ Y
 [root@kvm-host ~]# rmmod kvm_intel￼
 [root@kvm-host ~]# modprobe kvm_intel ept=1,vpid=1
 ```
+
+# AMD NPT
+
