--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -22,7 +22,7 @@
 - [4. Linux系统检查](#4-linux系统检查)
   - [4.1. /proc/cpuinfo](#41-proccpuinfo)
   - [4.2. sysfs文件系统](#42-sysfs文件系统)
-- [AMD NPT](#amd-npt)
+- [5. AMD NPT](#5-amd-npt)
 
 <!-- /code_chunk_output -->
 
@@ -230,5 +230,27 @@ Y
 [root@kvm-host ~]# modprobe kvm_intel ept=1,vpid=1
 ```
 
-# AMD NPT
+# 5. AMD NPT
 
+AMD NPT（Nested Page Table，嵌套页表）是AMD提供的内存虚拟化支持技术。
+如图 2-9 所示，传统的分页技术下的地址转换是直接将线性地址空间上的线性地址转换为物理地址空间上的物理地址。CR3寄存器中存储着页表的物理基地址。
+￼
+图2-9 传统分页技术下的地址转换:
+
+![2019-12-14-18-03-08.png](./images/2019-12-14-18-03-08.png)
+
+嵌套分页技术的原理如图2-10所示。
+
+1）客户机和宿主机都有自己的CR3寄存器，分别记为gCR3（guest CR3）和nCR3（nested CR3）。真正的CR3由VMM所控制和使用。
+
+2）gPT（guest Page Table，客户机页表）负责将客户机线性地址转换为客户机物理地址。客户机页表存在于客户机物理内存中，并由gCR3索引。
+
+3）nPT（nested Page Table，嵌套页表）负责将客户机物理地址转换为系统物理地址。嵌套页表存在于系统物理内存中，并由nCR3索引。
+
+4）最常用到的客户机线性地址到系统物理地址的映射关系在TLB中缓存。
+
+5）gCR3和客户机页表中存放的都是客户机物理地址，所以，在访问客户机页表前需要将客户机物理地址转换为系统物理地址。
+￼
+图2-10 嵌套分页技术下的地址转换:
+
+![2019-12-14-18-03-43.png](./images/2019-12-14-18-03-43.png)
