--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
@@ -7,8 +7,10 @@
 - [2. Linux内核源码中的KVM](#2-linux内核源码中的kvm)
   - [2.1. virt/kvm目录](#21-virtkvm目录)
   - [2.2. arch/x86/kvm目录](#22-archx86kvm目录)
-  - [2.3. include/linux目录](#23-includelinux目录)
-  - [2.4. include/asm-x86目录](#24-includeasm-x86目录)
+  - [2.3. arch/*/include/asm/kvm*](#23-archincludeasmkvm)
+  - [2.4. include/linux目录](#24-includelinux目录)
+  - [2.5. include/asm-x86目录](#25-includeasm-x86目录)
+  - [2.6. 文档](#26-文档)
 
 <!-- /code_chunk_output -->
 
@@ -82,10 +84,21 @@ KVM的核心代码
 
 **virt/kvm目录**如下：
 
-- ioapic.h
-- ioapic.c
-- iodev.h
-- kvm\_main.c
+```
+# ll virt/kvm
+total 184
+-rw-r--r-- 1  501   80    962 Aug 13 11:31 Kconfig
+drwxr-xr-x 4  501   80    198 Nov 27 09:06 arm
+-rw-r--r-- 1  501   80   5361 Aug 13 11:31 async_pf.c
+-rw-r--r-- 1  501   80    518 Aug 13 11:31 async_pf.h
+-rw-r--r-- 1 root root   4564 Nov 27 09:06 coalesced_mmio.c
+-rw-r--r-- 1  501   80    884 Aug 13 11:31 coalesced_mmio.h
+-rw-r--r-- 1  501   80  22755 Aug 13 11:31 eventfd.c
+-rw-r--r-- 1  501   80   5695 Aug 13 11:31 irqchip.c
+-rw-r--r-- 1 root root 109039 Nov 27 09:06 kvm_main.c
+-rw-r--r-- 1  501   80   8977 Aug 13 11:31 vfio.c
+-rw-r--r-- 1  501   80    289 Aug 13 11:31 vfio.h
+```
 
 这些文件是 KVM 的**架构无关文件**，独立于处理器平台体系，主要提供了一些**公用的方法**和**公用的数据结构**。
 
@@ -118,7 +131,17 @@ KVM的核心代码
 
 该目录是 KVM 的**主要文件目录**，除了包含 **x86 架构** KVM 所需要的**头文件、代码**之外，还包括适用于**Intel的模块文件(vmx.c**)和**AMD芯片的模块文件(svm.c**)。
 
-## 2.3. include/linux目录
+## 2.3. arch/*/include/asm/kvm*
+
+相关头文件
+
+```
+# ls -d arch/x86/include/asm/kvm*
+arch/x86/include/asm/kvm_emulate.h  arch/x86/include/asm/kvm_page_track.h  arch/x86/include/asm/kvm_vcpu_regs.h
+arch/x86/include/asm/kvm_host.h     arch/x86/include/asm/kvm_para.h        arch/x86/include/asm/kvmclock.h
+```
+
+## 2.4. include/linux目录
 
 **include/linux目录**如下：
 
@@ -129,7 +152,7 @@ KVM的核心代码
 
 这几个目录主要包含了KVM的一些**参数定义信息**。
 
-## 2.4. include/asm-x86目录
+## 2.5. include/asm-x86目录
 
 include/asm\-x86/目录如下：
 
@@ -139,4 +162,32 @@ include/asm\-x86/目录如下：
 - kvm\_x86\_emulate.h
 
 这几个目录中，包含了KVM的一些**汇编语言操作**时所需要的相关**宏定义**、**全局变量**等。
+
+## 2.6. 文档
+
+```
+Documentation/*/kvm*
+```
+
+```
+# ll Documentation/virt/kvm
+total 340
+-rw-r--r-- 1  501   80   8544 Aug 13 11:30 amd-memory-encryption.rst
+-rw-r--r-- 1 root root 188244 Dec  5 10:03 api.txt
+drwxr-xr-x 2  501   80     59 Nov 27 09:06 arm
+-rw-r--r-- 1  501   80   4417 Aug 13 11:30 cpuid.rst
+drwxr-xr-x 2  501   80    202 Nov 27 09:06 devices
+-rw-r--r-- 1  501   80   6392 Aug 13 11:30 halt-polling.txt
+-rw-r--r-- 1  501   80   5343 Aug 13 11:30 hypercalls.txt
+-rw-r--r-- 1  501   80    131 Aug 13 11:30 index.rst
+-rw-r--r-- 1  501   80   7758 Aug 13 11:30 locking.txt
+-rw-r--r-- 1 root root  20616 Nov 10 21:30 mmu.txt
+-rw-r--r-- 1  501   80  10663 Aug 13 11:30 msr.txt
+-rw-r--r-- 1  501   80   7857 Aug 13 11:30 nested-vmx.txt
+-rw-r--r-- 1  501   80   7514 Aug 13 11:30 ppc-pv.txt
+-rw-r--r-- 1  501   80   1538 Aug 13 11:30 review-checklist.txt
+-rw-r--r-- 1  501   80   2905 Aug 13 11:30 s390-diag.txt
+-rw-r--r-- 1  501   80  30416 Aug 13 11:30 timekeeping.txt
+-rw-r--r-- 1  501   80  13237 Aug 13 11:30 vcpu-requests.rst
+```
 
