--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
@@ -11,6 +11,7 @@
   - [2.4. include/linux目录](#24-includelinux目录)
   - [2.5. include/asm-x86目录](#25-includeasm-x86目录)
   - [2.6. 文档](#26-文档)
+  - [include/trace/events/kvm.h](#includetraceeventskvmh)
 
 <!-- /code_chunk_output -->
 
@@ -191,3 +192,6 @@ drwxr-xr-x 2  501   80    202 Nov 27 09:06 devices
 -rw-r--r-- 1  501   80  13237 Aug 13 11:30 vcpu-requests.rst
 ```
 
+## include/trace/events/kvm.h
+
+事件跟踪函数的声明
