--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/3. MSR中对特殊指令的支持.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/3. MSR中对特殊指令的支持.md
@@ -79,14 +79,18 @@ next：
 
 # 3. 支持syscall/sysret指令的MSR
 
-**syscall和sysret**是由**AMD首先引入**的，能使用在long mode环境下，可以在AMD的机器上**代替sysenter/sysexit指令**。**Intel不支持syscall/sysret在32位环境(！！！**)下使用。这里的描述**以AMD为主**。
+**syscall和sysret**是由**AMD首先引入**的，能使用在long mode环境下，可以在AMD的机器上**代替sysenter/sysexit指令**。
+
+**Intel不支持syscall/sysret在32位环境(！！！**)下使用。
+
+这里的描述**以AMD为主**。
 
 ![config](./images/16.png)
 
 注意在**Intel的MSR**里，**没有IA32\_CSTAR寄存器**（因为**不支持在非64位环境下使用！！！**）, 只有**IA32\_STAR、IA32\_LSTAR及IA32\_SFMASK寄存器**，如图所示，
 
-- **STAR[63：48**]是**sysret指令**使用的**CS和SS**，
-- **STAR[47：32**]是**syscall指令使用的CS和SS**值,
+- **STAR\[63：48**]是**sysret指令**使用的**CS和SS**，
+- **STAR\[47：32**]是**syscall指令使用的CS和SS**值,
 - **STAR寄存器低32位**用在**32位环境**的**入口点EIP**。
 - **在64位环境**下应该**使用LSTAR寄存器来装入口点RIP**
 - 而在**兼容模式**下应该使用**CSTAR寄存器**来存放**目标代码的入口点RIP**（64位的入口点）。
