--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/2. CPUID指令的术语和表达.md
@@ -3,21 +3,24 @@
 
 <!-- code_chunk_output -->
 
-* [leaf（叶）](#leaf叶)
-* [sub\-leaf（子叶）](#sub-leaf子叶)
-* [CPUID指令的描述形式](#cpuid指令的描述形式)
+- [1. leaf（叶）](#1-leaf叶)
+- [2. sub\-leaf（子叶）](#2-sub-leaf子叶)
+- [3. CPUID指令的描述形式](#3-cpuid指令的描述形式)
 
 <!-- /code_chunk_output -->
 
 Intel64手册里对CPUID指令广泛使用了如下一些表达形式和术语。
 
-# leaf（叶）
+# 1. leaf（叶）
 
 **功能号**使用**leaf术语**，例如：CPUID的**01号功能**，你可以称其为**CPUID的01 leaf（叶**）。
 
-# sub\-leaf（子叶）
+# 2. sub\-leaf（子叶）
 
-对于一些较复杂的信息查询，往往需要一个**辅助的子号**。**EAX寄存器**输入的是**main leaf（主叶号**），**ECX寄存器**提供的是**sub\-leaf（子叶号**）。
+对于一些较复杂的信息查询，往往需要一个**辅助的子号**。
+
+* **EAX寄存器**输入的是**main leaf（主叶号**），
+* **ECX寄存器**提供的是**sub\-leaf（子叶号**）。
 
 ```assembly
 mov eax，0Bh    ； main leaf
@@ -27,10 +30,10 @@ cpuid
 
 如上所示，0B号功能就是main leaf（主叶），ECX提供的0号就是sub-leaf（子叶）。
 
-# CPUID指令的描述形式
+# 3. CPUID指令的描述形式
 
 当软件需要**判断某项功能处理器是否支持**时，使用CPUID指令进行查询，在Intel手册中使用了下面的描述形式。
 
 ![config](./images/1.png)
 
-上面是判断处理器**是否支持PAE（Physical Address Extensions）功能**时的描述，当CPUID.01H：EDX[6]的值为1时，表示支持PAE功能。
+上面是判断处理器**是否支持PAE（Physical Address Extensions）功能**时的描述，当CPUID.01H：EDX\[6]的值为1时，表示支持PAE功能。
