--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/3. 基本信息与扩展信息.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/3. 基本信息与扩展信息.md
@@ -3,11 +3,14 @@
 
 <!-- code_chunk_output -->
 
-* [1 查询最大leaf（功能）号](#1-查询最大leaf功能号)
-* [2 基本最大功能号](#2-基本最大功能号)
-* [3 扩展最大功能号](#3-扩展最大功能号)
+- [1. 概述](#1-概述)
+- [2. 查询最大leaf（功能）号](#2-查询最大leaf功能号)
+- [3. 基本最大功能号](#3-基本最大功能号)
+- [4. 扩展最大功能号](#4-扩展最大功能号)
 
 <!-- /code_chunk_output -->
+
+# 1. 概述
 
 从**CPUID指令**获得的**信息有两大类**：**basic（基本**）和**extended（扩展**），要获得信息必须要先提供相应的leaf（功能号），每一类信息都有最大的功能号限制。
 
@@ -20,13 +23,13 @@ cpuid           ;查询 0 号信息
 
 **返回的相应信息**放在**eax、ebx、ecx**，以及**edx寄存器**中。这些信息是**32位**的，因此在**64位模式**下，**rax、rbx、rcx，以及rdx寄存器**的**高32位被清0**。
 
-# 1 查询最大leaf（功能）号
+# 2. 查询最大leaf（功能）号
 
 CPUID指令被使用来查询处理器所支持的特性，因此CPUID所支持的leaf数量是与处理器相关的。很多时候，在使用某个leaf查询之前，必须判断处理器是否支持该leaf。
 
-典型地，在使用0BH号功能时，应先查询处理器是否支持0BH号功能。
+典型地，在使用0BH号功能时，应先查询处理器**是否支持0BH号功能**。
 
-# 2 基本最大功能号
+# 3. 基本最大功能号
 
 使用CPUID的00H leaf来查询，最大的基本功能号返回在EAX寄存器里。
 
@@ -37,7 +40,7 @@ cmp eax，0BH    ； 判断是否支持 0B leaf
 jb no_support    ； 假如不支持...
 ```
 
-# 3 扩展最大功能号
+# 4. 扩展最大功能号
 
 同样，最大的扩展功能号也可以查询。
 
