--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第4章 处理器的身份/4. 处理器的型号（family，model与stepping）.md
@@ -7,14 +7,14 @@
 
 <!-- /code_chunk_output -->
 
-由**CPUID.01H：EAX**可返回**处理器的家族、模型及步进信息**。
+由`CPUID.01H：EAX`可返回**处理器的家族、模型及步进信息**。
 
 ![config](./images/6.png)
 
-- **EAX[11：8**]得到**family编码**，典型地，**P6家族**处理器的**family编码**是**06H**，Pentium4家族的family编码是0FH。
-- EAX[27：20]得到**扩展的family值**。
-- EAX[7：4]得到处理器**在家族中的model**。
-- EAX[19：16]得到**扩展的model值**。
+- `EAX[11：8]`得到**family编码**，典型地，**P6家族**处理器的**family编码**是**06H**，Pentium4家族的family编码是0FH。
+- `EAX[27：20]`得到**扩展的family值**。
+- `EAX[7：4]`得到处理器**在家族中的model**。
+- `EAX[19：16]`得到**扩展的model值**。
 
 在这些处理器信息里，**最重要**的是**family与model**。由于x86处理器的庞大和混乱，在Intel文档的相关描述中，使用了family和model的配合来描述处理器的特性，例如下面的这个描述。
 
@@ -22,7 +22,7 @@
 
 DisplayFamily值的计算方法如下。
 
-```c
+```cpp
 if （Family == 0FH）
 {
         DisplayFamily=ExtendedFamily + Family；
