--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -83,31 +83,41 @@ struct kvm {
 };
 ```
 
-**KVM结构体对象**中包含了**vCPU**、**内存**、**APIC**、**IRQ**、**MMU**、**Event事件管理**等信息。该结构体中的信息主要在 **KVM 虚拟机内部！！！使用**，用于**跟踪虚拟机的状态**。
+**KVM结构体对象**中包含了**vCPU**、**内存**、**APIC**、**IRQ**、**MMU**、**Event事件管理**等信息。
+
+该结构体中的信息主要在 **KVM 虚拟机内部！！！使用**，用于**跟踪虚拟机的状态**。
 
 在定义 KVM 结构体的**结构成员**的过程中，集成了**很多编译开关**，这些开关对应了 KVM 体系中的不同功能点。
 
 在 KVM 中，连接了如下几个重要的结构体成员，它们对虚拟机的运行有重要的作用。
 
-* struct kvm\_memslots \***memslots**;
+* `struct kvm_memslots *memslots`;
 
-KVM虚拟机所分配到的**内存slot**，以**数组形式**存储这些**slot的地址信息**。
+KVM虚拟机所分配到的**内存slot**，
 
-* struct kvm\_vcpu \*vcpus\[KVM\_MAX\_VCPUS];
+以**数组形式**存储这些**slot的地址信息**。
 
-KVM虚拟机中包含的**vCPU结构体**，**一个虚拟CPU**对应**一个vCPU结构体**。
+* `struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]`;
 
-* struct kvm\_io\_bus \*buses\[KVM\_NR\_BUSES];
+KVM虚拟机中包含的**vCPU结构体**，
 
-KVM虚拟机中的**I/O总线**，**一条总线**对应一个**kvm\_io\_bus结构体**，如**ISA总线**、**PCI总线**。
+**一个虚拟CPU**对应**一个vCPU结构体**。
 
-* struct kvm\_vm\_stat stat;
+* `struct kvm_io_bus *buses[KVM_NR_BUSES]`;
+
+KVM虚拟机中的**I/O总线**
+
+**一条总线**对应一个**kvm\_io\_bus结构体**，如**ISA总线**、**PCI总线**。
+
+* `struct kvm_vm_stat stat`;
 
 KVM虚拟机中的**页表**、**MMU**等**运行时状态信息**。
 
-* struct kvm\_arch arch;
+* `struct kvm_arch arch`;
 
-KVM 的软件 **arch** 方面所需要的一些参数，将在后文讨论 KVM 的实现机理时详细叙述。
+KVM 的软件 **arch** 方面所需要的一些参数，
+
+将在后文讨论 KVM 的实现机理时详细叙述。
 
 # 2. kvm_vcpu结构体
 
