--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -5,6 +5,7 @@
 
 - [1. KVM结构体](#1-kvm结构体)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
+- [`struct kvm *kvm;`](#struct-kvm-kvm)
 - [3. kvm_x86_ops结构体](#3-kvm_x86_ops结构体)
 - [4. KVM API中重要的结构体](#4-kvm-api中重要的结构体)
   - [4.1. kvm_chardev_ops](#41-kvm_chardev_ops)
@@ -103,6 +104,10 @@ KVM虚拟机中包含的**vCPU结构体**，
 
 **一个虚拟CPU**对应**一个vCPU结构体**。
 
+* `struct list_head vm_list;`
+
+Host上的VM管理链表
+
 * `struct kvm_io_bus *buses[KVM_NR_BUSES]`;
 
 KVM虚拟机中的**I/O总线**
@@ -130,15 +135,21 @@ KVM 的软件 **arch** 方面所需要的一些参数，
 struct kvm_vcpu
 ```
 
-* int vcpu\_id;
+# `struct kvm *kvm;`
+
+归属的kvm
+
+* `int vcpu_id`;
 
 对应的VCPU的ID。
 
-* struct **kvm\_run** \*run;
+* `struct kvm_run *run;`
 
-vCPU 的**运行时参数**，其中保存了**寄存器信息**、**内存信息**、**虚拟机状态**等各种**动态信息**。
+vCPU 的**运行时参数**，即运行时的状态
 
-* struct **kvm\_vcpu\_arch** arch;
+其中保存了**寄存器信息**、**内存信息**、**虚拟机状态**等各种**动态信息**。
+
+* `struct kvm_vcpu_arch arch;`
 
 存储有 KVM **虚拟机**的**运行时参数**，如**定时器**、**中断**、**内存槽**等方面的信息。
 
