--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -6,6 +6,7 @@
 - [1. KVM结构体](#1-kvm结构体)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
 - [3. kvm_x86_ops结构体](#3-kvm_x86_ops结构体)
+- [结构体之间的关系](#结构体之间的关系)
 - [4. KVM API中重要的结构体](#4-kvm-api中重要的结构体)
   - [4.1. kvm_chardev_ops](#41-kvm_chardev_ops)
   - [4.2. kvm_vm_fops](#42-kvm_vm_fops)
@@ -217,6 +218,41 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 ```
 
 有关该结构的各个成员的详细说明，将在后文针对 KVM 的初始化和其他关键过程的分析过程中进行详细阐述。
+
+# 结构体之间的关系
+
+先看下相关结构体的相关部分
+
+```cpp
+// arch/x86/kvm/vmx/vmx.h
+struct vcpu_vmx {
+	struct kvm_vcpu       vcpu;
+	/*
+	 * loaded_vmcs points to the VMCS currently used in this vcpu. For a
+	 * non-nested (L1) guest, it always points to vmcs01. For a nested
+	 * guest (L2), it points to a different VMCS.
+	 */
+	struct loaded_vmcs    vmcs01;
+	struct loaded_vmcs   *loaded_vmcs;
+}
+```
+
+```cpp
+// include/linux/kvm_host.h
+struct kvm_vcpu {
+	int cpu;    /*运行当前VCPU的物理CPU编号*/
+}
+```
+
+```cpp
+
+struct loaded_vmcs {
+	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
+	int cpu;            /*上一次运行的CPU编号*/
+	int launched;
+	struct list_head loaded_vmcss_on_cpu_link;
+};
+```
 
 # 4. KVM API中重要的结构体
 
