--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -245,7 +245,7 @@ struct kvm_vcpu {
 ```
 
 ```cpp
-
+// arch/x86/kvm/vmx/vmcs.h
 struct loaded_vmcs {
 	struct vmcs *vmcs;  /*本VCPU对应的VMCS*/
 	int cpu;            /*上一次运行的CPU编号*/
@@ -253,6 +253,12 @@ struct loaded_vmcs {
 	struct list_head loaded_vmcss_on_cpu_link;
 };
 ```
+
+VMX其实是**VCPU**的**一个运行环境**，理解为environment。集中通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**及**VMCS**关联起来。
+
+一个VCPU当然可以运行在不同的物理CPU之上，只要更换loaded_vmcs中cpu编号即可；
+
+
 
 # 4. KVM API中重要的结构体
 
