--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -256,7 +256,7 @@ struct loaded_vmcs {
 
 VMX其实是**VCPU**的**一个运行环境**，理解为environment。
 
-通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**及**VMCS**关联起来。
+通过**loaded\_vmcs**和**vcpu**成员将**vmcs**和**CPU**关联起来。
 
 **一个VCPU**当然可以运行在**不同的物理CPU**之上，只要更换`loaded_vmcs`中**cpu编号**即可；
 
