--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -5,6 +5,7 @@
 
 - [1. KVM结构体](#1-kvm结构体)
 - [2. kvm_vcpu结构体](#2-kvm_vcpu结构体)
+- [kvm_run结构体](#kvm_run结构体)
 - [3. kvm_x86_ops结构体](#3-kvm_x86_ops结构体)
 - [4. 结构体之间的关系](#4-结构体之间的关系)
 - [5. KVM API中重要的结构体](#5-kvm-api中重要的结构体)
@@ -96,7 +97,7 @@ struct kvm {
 
 KVM虚拟机所分配到的**内存slot**，
 
-以**数组形式**存储这些**slot的地址信息**。
+以**数组形式**存储这些**slot的地址信息**。用于GPA转成HVA, 内存虚拟化.
 
 * `struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]`;
 
@@ -116,6 +117,8 @@ KVM虚拟机中的**I/O总线**
 
 * `struct kvm_vm_stat stat`;
 
+虚拟机运行时状态信息
+
 KVM虚拟机中的**页表**、**MMU**等**运行时状态信息**。
 
 * `struct kvm_arch arch`;
@@ -128,7 +131,9 @@ KVM 的软件 **arch** 方面所需要的一些参数，
 
 在用户通过**KVM\_CREATE\_VCPU**系统调用请求创建vCPU之后，**KVM子模块**将创建kvm\_vcpu结构体并进行相应的初始化操作，然后返回**对应的vcpu\_fd描述符**。
 
-在KVM的**内部虚拟机调度！！！** 中，以**kvm\_vcpu**和**KVM中的相关数据**进行操作。kvm\_vcpu结构体中的字段较多，其中重要的成员如下。
+在KVM的**内部虚拟机调度！！！** 中，以**kvm\_vcpu**和**KVM中的相关数据**进行操作。
+
+kvm\_vcpu结构体中的字段较多，其中重要的成员如下。
 
 ```cpp
 // include/linux/kvm_host.h
@@ -156,6 +161,8 @@ vCPU 的**运行时参数**，即运行时的状态
 存储有 KVM **虚拟机**的**运行时参数**，如**定时器**、**中断**、**内存槽**等方面的信息。
 
 另外，kvm\_cpu中还包含了执行**iomem**所需要的数据结构，用于处理**iomem方面**的请求。
+
+# kvm_run结构体
 
 # 3. kvm_x86_ops结构体
 
